--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.1.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -22,6 +23,7 @@
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^0.0.1",
+    "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
