--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^0.0.1",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
